# pdfa-service

./: .actrc  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.de.md  CLAUDE.md  COMPRESSION.de.md  COMPRESSION.md  CURL-GUIDE.md  DEFINITION_OF_DONE.md  DOCKER-HUB.md  Dockerfile  OCR-SCANNER-GUIDE.de.md  OCR-SCANNER-GUIDE.md  OCR-SCANNER.de.md  OCR-SCANNER.md  README.de.md  README.md  SECURITY.md  TEST_INFRASTRUCTURE_IMPROVEMENTS.md  TRANSLATIONS.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_all_tests.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  dod-check.yml
docker/: mongo-init.js
docker-compose-examples/: README.md  docker-compose.dev.yml  docker-compose.raspberry-pi.yml  docker-compose.secure.yml  docker-compose.standard.yml  docker-compose.windows.yml  nginx.conf
docs/: ACCESSIBILITY.md  AUTHENTICATION.md  ENVIRONMENT_SETUP.de.md  ENVIRONMENT_SETUP.md  INSTALLATION.md  OAUTH_SETUP_LOCALHOST.md
docs/specs/: README.md  auth-page-visibility.md
examples/: README.de.md  README.md
examples/nginx-letsencrypt/: README.de.md  README.md  docker-compose.yml  init-letsencrypt.sh  nginx.conf
examples/nginx-reverse-proxy/: README.de.md  README.md  docker-compose.yml  nginx.conf
scripts/: README.md  batch-convert.sh  curl-examples.sh  verify-dod.sh  verify-pairing-fixes.sh
src/pdfa/: __init__.py  a11y_camera_config.py  api.py  auth.py  auth_config.py  cli.py  compression_config.py  converter.py  db.py  db_config.py  event_logger.py  exceptions.py  format_converter.py  image_converter.py  job_manager.py  logging_config.py  models.py  pairing_manager.py  progress_tracker.py  repositories.py  request_context.py  user_models.py  web_ui.html  web_ui.html.backup  websocket_protocol.py
tests/: __init__.py  conftest.py  test_a11y_camera_config.py  test_api.py  test_api_concurrent.py  test_api_office.py  test_auth.py  test_cli.py  test_cli_office.py  test_compression_config.py  test_converter.py  test_converter_errors.py  test_converter_events.py  test_event_logger.py  test_format_converter.py  test_image_converter.py  test_job_manager.py  test_models.py  test_pairing_manager.py  test_progress_tracker.py  test_repositories.py  test_security.py  test_security_advanced.py  test_websocket_protocol.py
tests/e2e/: ACCESSIBILITY_TEST_STATUS.md  README_EVENT_MODAL_TESTS.md  conftest.py  test_account_tab.py  test_auftraege_tab.py  test_auth_page_visibility.py  test_camera_accessibility.py  test_camera_tab.py  test_conversion_debug.py  test_design_system.py  test_event_display_and_modal.py  test_event_summary_modal.py  test_jobs_tab.py  test_konto_tab.py  test_logo_favicon.py  test_progress_updates_real.py  test_qr_code_library.py  test_regression_fixes.py  test_simple_web_ui.py  test_tab_icons.py  test_tab_navigation.py  test_web_ui_conversion.py
tests/integration/: conftest.py  test_conversion.py  test_event_modal_flow.py  test_job_status_integration.py  test_live_events_flow.py  test_long_conversion_reliability.py  test_office_conversion.py  test_pairing_api.py  test_pairing_websocket.py  (+2 more)
(+72 files in other folders)
