[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfa"
version = "0.1.0"
description = "Command-line interface for converting PDFs to PDF/A using OCRmyPDF."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ocrmypdf>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.2.0",
]

[project.scripts]
pdfa-cli = "pdfa.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "UP", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
