[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfa"
version = "0.1.0"
description = "REST and Command-line interface for converting PDFs to PDF/A using OCRmyPDF."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ocrmypdf>=16.12.0",
    "pikepdf>=9.0.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.10",
    "img2pdf>=0.5.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.6.2",
    "black>=25.1",
    "ruff>=0.9",
    "httpx>=0.28",
    "pip-audit>=2.7",
]

[project.scripts]
pdfa-cli = "pdfa.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "N818"]

[tool.ruff.lint.per-file-ignores]
# Ignore line length in fallback HTML UI
"src/pdfa/api.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
timeout = 300
timeout_method = "thread"
